# zoom-sui

./: .gitignore  BUILD_SUCCESS.md  CHILD_WALLET_GUIDE.md  CONTRACT_UPDATE_SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_SETUP.md  USER_VALIDATION_REVIEW.md  WARP.md
backend/: .gitignore  README.md  create_backend_tables.sql  package.json
backend/prisma/: schema.prisma
backend/prisma/prisma/: dev.db  dev.db-journal
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/lib/: crypto.ts  jwt.ts  prisma.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  childWallet.ts  rooms.ts  sessions.ts  signaling.ts
backend/src/types/: index.ts
docs/: ROOM_WHITELIST_FLOW.md
frontend-app/: ROOM_CREATION_GUIDE.md  ZKLOGIN_README.md  package-lock.json  package.json
frontend-app/src/app/: layout.tsx  page.tsx  provider.tsx
frontend-app/src/app/calling/: page.tsx
frontend-app/src/components/: ChildWalletManager.tsx
frontend-app/src/context/: AuthContext.tsx  LoadingContext.tsx
frontend-app/src/hooks/: useAuth.ts  useChildWallet.ts  useToken.ts
frontend-app/src/lib/: api.ts  walrus.ts  zkLogin.ts
frontend-app/src/provider/: BaseProvider.tsx
indexer/: .env  .env.example  Cargo.toml  Dockerfile  README.md  build-docker.sh  entry_indexer.sh
indexer/migrations/2024-11-08-create-meeting-rooms/: down.sql  up.sql
indexer/migrations/2025-11-08-070637-0000_create_room_participants/: down.sql  up.sql
indexer/migrations/2025-11-08-071501-0000_create_room_metadata/: down.sql  up.sql
indexer/src/: lib.rs  main.rs  models.rs
indexer/src/db/: models.rs  schema.rs
indexer/src/events/: meeting_events.rs  mod.rs  types.rs
indexer/src/processors/: metadata_processor.rs  mod.rs  room_processor.rs
indexer/src/utils/: host_cap_parser.rs  meeting_room_parser.rs  metadata_parser.rs  mod.rs  types.rs
sealmeet/sources/: sealmeet.move
sealmeet/tests/: sealmeet_tests.move
suimeet/: Move.toml
suimeet/sources/: seal_approve_whitelist.move  suimeet.move
suimeet/tests/: suimeet_tests.move
(+21 files in other folders)
