[package]
name = "suimeet-indexer"
version = "0.1.0"
edition = "2021"
authors = ["SuiMeet Team"]
description = "Sequential pipeline indexer for SuiMeet meeting rooms using Sui Custom Indexing Framework"

[dependencies]
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }

move-binding-derive = { git = "https://github.com/benhaq/move-binding-cmdoss.git", rev = "679bd4796cac46c9551c5849d469df0cad523ec3" }
move-types = { git = "https://github.com/benhaq/move-binding-cmdoss.git", rev = "679bd4796cac46c9551c5849d469df0cad523ec3" }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "8eee97380cac1a1899d3cca427bde7ac906abdb9" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "8eee97380cac1a1899d3cca427bde7ac906abdb9" }

# Database ORM (required by framework)
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.2"

# Async traits
async-trait = "0.1"

# BCS serialization for parsing Move events
bcs = "0.1.4"

# Async Runtime
tokio = { version = "1.44", features = ["full"] }

# Error Handling
anyhow = "1.0"

# Configuration
clap = { version = "4.4", features = ["derive"] }
url = "2.3.1"
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
